--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </div>
   </header>
   <!-- hero -->
-  <section class="bg-[#04030F] h-auto w-full px-4 pb-10 md:py-0 text-white">
+  <section class="bg-[#0B0D1A] h-auto w-full px-4 pb-10 md:py-0 text-white">
     <div class="w-full max-w-[1320px] mx-auto ">
       <div class="flex flex-col-reverse gap-10 md:flex-row justify-between items-center">
         <div class="w-full sm:w-3/5 lg:w-2/3 flex flex-col gap-2">
