--- a/navbar.html
+++ b/navbar.html
@@ -1,12 +1,12 @@
-<div class="flex items-center my-1 gap-3 md:gap-10 -mx-2 md:mx-0">
+<div class="flex items-center my-3 gap-3 md:gap-10 -mx-2 md:mx-0">
   <div>
     <a href="/">
-      <img src="./images/logo.jpg" alt="logo" class="w-full sm:w-[120px] h-[50px] sm:h-[80px]">
+      <img src="logo.png" alt="logo" class="max-w-[100px] sm:max-w-[200px]">
     </a>
   </div>
   <nav class="w-full flex justify-start gap-5 justify-end items-center sm:text-xl">
-    <a href="/" class="hover:underline underline-offset-4 transition-all duration-300">Home</a>
-    <a href="/legal/" class="hover:underline underline-offset-4 transition-all duration-300" id="legal">Legal</a>
-    <a href="/birthregistry" class="hover:underline underline-offset-4 transition-all duration-300">Birth Registry</a>
+    <a href="/" class="text-[14px] sm:text-[18px] hover:underline underline-offset-4 transition-all duration-300">Home</a>
+    <a href="/legal/" class="text-[14px] sm:text-[18px] hover:underline underline-offset-4 transition-all duration-300" id="legal">Legal</a>
+    <a href="/birthregistry" class="text-[14px] sm:text-[18px] hover:underline underline-offset-4 transition-all duration-300">Birth Registry</a>
   </nav>
 </div>
