favicon, title, hero text updated

--- a/birthregistry/index.html
+++ b/birthregistry/index.html
@@ -6,8 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Birth Registry</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <title>Cthuwee - Adorable, hand-made, collectible plushes inspired by the works of H.P. Lovecraft</title>
+
   <link rel="stylesheet" href="../style.css">
-  <link rel="shortcut icon" href="/images//favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="/images//favicon.png" type="image/x-icon">
   <style>
     .splash {
       background-image: url(../images/birth-registry.png);
