--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
   <script async src="https://js.stripe.com/v3/buy-button.js"></script>
+  <title>Cthuwee - Adorable, hand-made, collectible plushes inspired by the works of H.P. Lovecraft</title>
   <script type="text/javascript">
     (function () {
       //   emailjs.init("YOUR_PUBLIC_KEY");
@@ -15,7 +16,7 @@
     })();
   </script>
   <link rel="stylesheet" href="style.css">
-  <link rel="shortcut icon" href="/images//favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="/images/favicon.png" type="image/x-icon">
   <style>
     #buy_btn_1OTUVCK9UkRpUcwG0B03qdx7 {
       background-color: brown;
@@ -74,9 +75,9 @@
   <section class="bg-[#0B0D1A] h-auto w-full px-4 pb-10 md:py-0 text-white">
     <div class="w-full max-w-[1320px] mx-auto ">
       <div class="flex flex-col-reverse gap-10 md:flex-row justify-between items-center">
-        <div class="w-full sm:w-3/5 lg:w-2/3 flex flex-col gap-2">
-          <p class="text-4xl font-semibold text-center md:text-left">Origins</p>
-          <br class="text-[20px] leading-[24px]">In the Eons of Aldebaran, the great Cthulhu was struck by loss when his firstborn vanished, taken by the mysterious Shadows of Yog-Sothoth.</br> Fueled by wrath and love, Cthulhu prepared to shake the heavens in search. But first, he entrusted his remaining offspring, the cuddly Cthuwees, into the loving arms of humans.<br> Adopt an adorable Cthuwee today, and share a cosmic bond of love that bridges worlds, as you wait for Cthulhu's triumphant return.</p>
+        <div class="w-full sm:w-3/5 lg:w-2/3 flex flex-col gap-6">
+          <h1 class="text-3xl md:text-[40px] font-semibold text-center md:text-left">Origins</h1>
+          <p class="text-[20px] md:text-[25px] font-normal leading-snug"> In the Eons of Aldebaran, the great Cthulhu was struck by loss when his firstborn vanished, taken by the mysterious Shadows of Yog-Sothoth.</br> Fueled by wrath and love, Cthulhu prepared to shake the heavens in search. But first, he entrusted his remaining offspring, the cuddly Cthuwees, into the loving arms of humans.</br> Adopt an adorable Cthuwee today, and share a cosmic bond of love that bridges worlds, as you wait for Cthulhu's triumphant return. </p>
           <div class="mt-3">
             <a href="#adopt"
                class="bg-black px-10 py-3 rounded-md text-black font-semibold bg-gray-100 hover:bg-gray-300 transition-all duration-300">Adopt Now</a>
@@ -84,7 +85,6 @@
         </div>
         <div class="w-full sm:w-2/5 lg:w-1/3 lg:h-[70vh] flex justify-center sm:justify-end ">
           <img src="/images/vertical.png" alt="" class="w-full rounded md:w-auto h-full object-cover">
-          
         </div>
       </div>
     </div>
