--- a/legal/index.html
+++ b/legal/index.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Legal</title>
+  <title>Cthuwee - Adorable, hand-made, collectible plushes inspired by the works of H.P. Lovecraft</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="../style.css">
-  <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon">
   <style>
     .splash {
       background-image: url(../images/legal.jpeg);
