--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <div class="flex flex-col-reverse gap-10 md:flex-row justify-between items-center">
         <div class="w-full sm:w-3/5 lg:w-2/3 flex flex-col gap-6">
           <h1 class="text-3xl md:text-[40px] font-semibold text-center md:text-left">Origins</h1>
-          <p class="text-[20px] md:text-[25px] font-normal leading-snug"> In the Eons of Aldebaran, the great Cthulhu was struck by loss when his firstborn vanished, taken by the mysterious Shadows of Yog-Sothoth.</br> Fueled by wrath and love, Cthulhu prepared to shake the heavens in search. But first, he entrusted his remaining offspring, the cuddly Cthuwees, into the loving arms of humans.</br> Adopt an adorable Cthuwee today, and share a cosmic bond of love that bridges worlds, as you wait for Cthulhu's triumphant return. </p>
+          <p class="text-[20px] md:text-[25px] font-normal leading-snug mt-5"> In the Eons of Aldebaran, the great Cthulhu was struck by loss when his firstborn vanished, taken by the mysterious Shadows of Yog-Sothoth.</br> Fueled by wrath and love, Cthulhu prepared to shake the heavens in search. But first, he entrusted his remaining offspring, the cuddly Cthuwees, into the loving arms of humans.</br> Adopt an adorable Cthuwee today, and share a cosmic bond of love that bridges worlds, as you wait for Cthulhu's triumphant return. </p>
           <div class="mt-3">
             <a href="#adopt"
                class="bg-black px-10 py-3 rounded-md text-black font-semibold bg-gray-100 hover:bg-gray-300 transition-all duration-300">Adopt Now</a>
