--- a/index.html
+++ b/index.html
@@ -60,6 +60,32 @@
       width: 100%;
       height: 500px;
     }
+
+    #loading-overlay {
+      display: none;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(255, 255, 255, 0.8);
+      justify-content: center;
+      align-items: center;
+    }
+
+    .loader {
+      border: 8px solid #f3f3f3;
+      border-top: 8px solid #3498db;
+      border-radius: 50%;
+      width: 50px;
+      height: 50px;
+      animation: spin 1s linear infinite;
+    }
+
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
   </style>
 </head>
 
@@ -124,6 +150,9 @@
       <div class="flex flex-col md:flex-row gap-8 justify-between">
         <div class="md:w-1/2 flex md:justify-center relative">
           <img id="img" src="/images/products/1.jpeg" alt="black plushies" class="max-w-[100%] object-contain rounded-md ">
+          <div id="loading-overlay" class="absolute top-0 left-0 w-full h-full flex justify-center items-center">
+            <div class="loader"></div>
+          </div>
           <div class="absolute left-0 top-[50%] w-full h-[50px] -mt-[25px] flex justify-between px-3">
             <button id="prev" class="">
               <img src="/images/icons/angle-left-solid.svg" alt="prev" class="h-10">
