--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
     <div class="w-full max-w-[1320px] mx-auto ">
       <div class="flex flex-col-reverse gap-10 md:flex-row justify-between items-center">
         <div class="w-full sm:w-3/5 lg:w-2/3 flex flex-col gap-8">
-          <h1 class="text-3xl md:text-[40px] font-semibold text-center md:text-left">Origins</h1>
+          <h1 class="text-4xl md:text-[40px] font-semibold text-left">Origins</h1>
           <div>
-            <p class="text-[20px] md:text-[25px] font-regular leading-snug mt-5"> In the Eons of Aldebaran, the great Cthulhu was struck by loss when his firstborn vanished, taken by the mysterious Shadows of Yog-Sothoth.</p>
+            <p class="text-[20px] md:text-[25px] font-regular leading-snug sm:mt-5"> In the Eons of Aldebaran, the great Cthulhu was struck by loss when his firstborn vanished, taken by the mysterious Shadows of Yog-Sothoth.</p>
             <p class="text-[20px] md:text-[25px] font-regular leading-snug my-6"> Fueled by wrath and love, Cthulhu prepared to shake the heavens in search. But first, he entrusted his remaining offspring, the cuddly Cthuwees, into the loving arms of humans.</p>
             <p class="text-[20px] md:text-[25px] font-regular leading-snug">Adopt an adorable Cthuwee today, and share a cosmic bond of love that bridges worlds, as you wait for Cthulhu's triumphant return.</p>
           </div>
@@ -191,7 +191,7 @@
   <section class="w-full px-4 py-10 bg-gray-100">
     <div class="w-full max-w-[1320px] mx-auto">
       <h2 class="text-4xl font-bold text-center">History</h2>
-      <p class="my-5 text-lg text-[20px] font-medium">Cthuwee was born in December 2023 just outside Altuna, PA, in a little town called Roaring Spring. Watch the making of the company and its adorable plushies on YouTube.</p>
+      <p class="my-5 text-lg text-[20px] font-medium text-center sm:text-left">Cthuwee was born in December 2023 just outside Altuna, PA, in a little town called Roaring Spring. Watch the making of the company and its adorable plushies on YouTube.</p>
       <div class="mx-auto ">
         <iframe
                 src="https://www.youtube.com/embed/tQTP6uxXmsY"
